# autoresearch-quantum

./: .gitignore  .pre-commit-config.yaml  README.md  THE_STORY.md  pyproject.toml
.github/workflows/: ci.yml
configs/rungs/: rung1.yaml  rung2.yaml  rung3.yaml  rung4.yaml  rung5.yaml
notebooks/: 00_START_HERE.ipynb  learning_objectives.md
notebooks/plan_a/: 01_encoded_magic_state.ipynb  02_measuring_progress.ipynb  03_the_ratchet.ipynb  OVERVIEW.md
notebooks/plan_b/: OVERVIEW.md  spiral_notebook.ipynb
notebooks/plan_c/: 00_dashboard.ipynb  OVERVIEW.md  track_a_physics.ipynb  track_b_engineering.ipynb  track_c_search.ipynb
notebooks/plan_d/: OVERVIEW.md  experiment_1_protection.ipynb  experiment_2_noise.ipynb  experiment_3_optimisation.ipynb
paper/: autoresearch_quantum.tex  compendium.tex
scripts/: app.sh  build_plan_d.py  enhance_dashboard.py  enhance_nb01.py  enhance_nb02.py  enhance_nb03.py  enhance_spiral.py  enhance_track_a.py  enhance_track_b.py  enhance_track_c.py  fix_math_in_explanations.py  rebuild_nb01.py  strip_teaching_cells.py
src/autoresearch_quantum/: __init__.py  cli.py  config.py  models.py
src/autoresearch_quantum/codes/: __init__.py  four_two_two.py
src/autoresearch_quantum/execution/: __init__.py  analysis.py  backends.py  hardware.py  local.py  transfer.py  transpile.py
src/autoresearch_quantum/experiments/: __init__.py  encoded_magic_state.py
src/autoresearch_quantum/lessons/: __init__.py  extractor.py  feedback.py
src/autoresearch_quantum/persistence/: __init__.py  store.py
src/autoresearch_quantum/ratchet/: __init__.py  runner.py
src/autoresearch_quantum/scoring/: __init__.py  score.py
src/autoresearch_quantum/search/: __init__.py  challengers.py  strategies.py
src/autoresearch_quantum/teaching/: __init__.py  assess.py  tracker.py
tests/: test_analysis.py  test_browser_ux.py  test_cli.py  test_codes.py  test_config.py  test_experiments.py  test_feedback.py  test_harness.py  test_notebooks.py  test_pedagogy.py  test_persistence.py  test_scoring.py  test_teaching.py
